istio/BlueGreenDeploy/nginx-vs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-vs
  namespace: abtest
spec:
  selector:
    appname: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
