istio/BlueGreenDeploy/istio-settings-2.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - nginx-vs
  gateways:
    - my-gateway
  http:
    - match:
        - headers:
            version:
              exact: "2.0"
      route:
        - destination:
            host: nginx-vs
            subset: v2
    - route:
        - destination:
            host: nginx-vs
            subset: v1

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-vs
spec:
  host: nginx-vs
  subsets:
    - name: v1
      labels:
        version: "v1.0"
    - name: v2
      labels:
        version: "v2.0"
